fixed popup z-index below chat due to framer motion

--- a/src/Components/Bubble/Bubble.css
+++ b/src/Components/Bubble/Bubble.css
@@ -1,21 +1,15 @@
 .chats_contain .msg_contain{
     display: flex;
-    /* background-color: blueviolet; */
     gap: 10px;
     padding: 0px 10px;
-    /* margin: 10px 0px; */
 }
 .chats_contain .msg_contain .msg{
     display: flex;
     flex-direction: column;
     gap: 5px;
     min-width: 150px;
-    /* background-color: #05b3ec; */
     max-width: 350px;
     overflow-wrap: break-word;
-}
-.chats_contain .msg_contain .msg{
-    /* z-index: 120; */
 }
 .chats_contain .msg_contain .msg .sender_name
 {
@@ -23,16 +17,11 @@
     margin-bottom: 3px;
 }
 .chats_contain .msg_contain .msg .time{
-    /* background-color: blanchedalmond; */
-
     text-align: right;
     font-size: 10px;
     margin-top: -5px;
-    /* color: gray; */
-    /* font-style: italic; */
 }
 .chats_contain .msg_contain .dp_contain{
-    /* background-color: aqua; */
     display: flex;
     justify-content: center;
     align-items: center;
