--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -95,5 +95,4 @@
   height: 100%;
   width: 100%;
   cursor: default;
-  background-color: #ff4154;
 }
