--- a/src/Components/RightPanel/Components/ChatHeader/ChatHeader.css
+++ b/src/Components/RightPanel/Components/ChatHeader/ChatHeader.css
@@ -1,4 +1,5 @@
 .right_panel .chat_box .chat_header {
+    z-index: 70;
     position: relative;
     display: flex;
     align-items: center;
@@ -32,14 +33,6 @@
 }
 
 .right_panel .chat_box .chat_header .backdrop {
-    /* z-index: 79;
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    height: 100vh;
-    width: 100vw; */
-
-
     position: fixed;
     z-index: 90;
     top: 0;
@@ -47,24 +40,9 @@
     height: 100vh;
     width: 100vw;
     cursor: default;
-    background-color: #ff4154;
 }
 
 .right_panel .chat_box .chat_header .room_menu {
-    /* position: absolute;
-    font-size: 15px;
-    right: 25px;
-    top: 50px;
-    background-color: white;
-    z-index: 80;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    padding: 20px;
-    border-radius: 10px;
-    border: 1px solid rgb(238, 238, 238); */
-
-
     background-color: white;
     position: absolute;
     top: 50px;
